--- a/uni-notes/SP1001 Literature/1. Seven Stories from Spanish America.md
+++ b/uni-notes/SP1001 Literature/1. Seven Stories from Spanish America.md
@@ -49,4 +49,80 @@ Rulfo's most dramatic story
 - 
 
 
-# W2 L1:
+# W2 L2:
+## García Márquez
+Early work focuses on the violence and intolerance in Colombia
+- El Bogotazo
+	- Massive riots following the assassination of the Liberal presidential candidate
+	- c. 5000 deaths resulted from the 10 hour riot in Bogotá
+	- Launched a violent period in Colombian history
+	- Civil war between the Conservatives and Liberals. Conflict still influential today.
+La hojarasca (1955)
+El coronel no tiene quien le escriba (1961)
+Los funerales de la mamá grande (1962)
+
+Cien Años de Soledad.
+- Written while in exile in Mexico (1967)
+- Highly influential on Latin American and world literature
+- foundational text of what is known as magical realism
+
+## Magical Realism
+- A tendency in Latin American writing in the 1960s-70s to incorporate magical elements into a narrative that is seemingly realistic
+- Aim: to provide a more complex understanding of the reality that the author seeks to represent
+
+*La visión de los vencidos* book
+- Language insufficient to describe clashing clutures and knowledge.
+- Mutual exchange of ideas and realities --> hybrid forms (culture)
+
+Argentina: la conquista del desierto
+Criollos called it la conquista
+The indigenous people called it genocide
+
+criollo: someone who has european ancestry but was born and raised in Latin America
+mestizo: someone of mixed heritage
+indigena: indigenous
+
+## Latin American Boom
+Magical Realism was one of the tendencies of the Latin American Boom
+
+- 1960s
+- A number of Latin American writers considered and promoted as very innovative (in Europe and the USA,)
+Seix Barral
+- It is not a generation, nor a movement
+- It is a tendency in writing, a literary style
+	- Innovative and experimental (structure and content)
+	- also known as 'nueva novela' (but not a great term as many were not novels, but rather short stories etc.)
+
+If there is a 'boom' in the 1960s and 1970s, it is the unprecedented interest in Latin American fiction outside Latin American. There were plenty of influential writers before the boom, simply not the international promotion of them.
+
+Magical Realism is not fantastic realism. It is a blend of realism and fantasy: you have a realistic context, suddenly something happens to kick you out of it but it comes to be accepted. It is not fantasy!
+
+Metaphors that stand for the complex and often irreconcilable realities of the continent:
+- Politics (dictatorships, violence, massacres...)
+- Society (extreme stratification...)
+- Culture (Amerindian, European, African...)
+
+## Julio Cortázar
+- Cortázar: in a novel there are various happenings in succesion. In the short story there is a principle happening which serves as a core whereby the actions of the heroes are articulated
+- Cortázar: in the short story the hermeneutic scope of the text is amplified
+- Makes use of colloquial language, orality, a fantastic/disturbing atmosphere.
+- The reader is trapped through alteration of syntax and dissolution of reality.
+	- It is Cortázar's Neofantastic
+
+*The present state of Fiction in Latin America*, Cortázar
+- "Many of my fantastic stories were born in an oneiric territory" (oneiric reffering to dreams)
+	- Influenced by Freud's ideas of the unconscious
+	- Influenced by surrealism
+
+Cortázar's Neofantastic
+- Refers to the intrusion of the fantastic, marvellous element in everyday life
+	- Which we do not realise until it is too late
+- "La alteración momentánea dentro de la regularidad"
+- An osmosis between the fantastic and the habitual, not a juxtaposition
+Cortázar's example: Borges' "El milargro secreto"
+- The universe becommes immobile, a whole year passes for Hladik such that he finishes his play; for the soldiers an instant has passed.
+
+The Neofantastic
+- Reality is permeated by the uncanny
+- Highly subversive of Reason and its binary logical (real/unreal, normal/magical, ordinary/extraordinary)
+- It is not real, not unreal, but something in between: The "third fronteir"
