week 2 CO, SP, PY

--- a/uni-notes/SP1001 Literature/1. Seven Stories from Spanish America.md
+++ b/uni-notes/SP1001 Literature/1. Seven Stories from Spanish America.md
@@ -126,3 +126,24 @@ The Neofantastic
 - Reality is permeated by the uncanny
 - Highly subversive of Reason and its binary logical (real/unreal, normal/magical, ordinary/extraordinary)
 - It is not real, not unreal, but something in between: The "third fronteir"
+
+# Seminar 1
+Cortazar: pdf
+
+Garcia Marquez:
+it is not magical realism. There is no fantastical reality, but rather imagination and fantasy and odd kindness and behaviours of people.
+Baltazar & Urzula: challenging gender roles (he is the creator and she is more grounded?), a non-traditional family unit, 
+
+"mas bella del mundo"
+
+By leaving the cage behind he chooses the moral choice over the social choice of selling it for money.
+
+Questions capitalism and the artistic market.
+
+The idea of the dream at the end, he pretends that he sold the cage but in reality he is isolated. The happiest dream of his life, not just the night but also his wish to be a succesfully selling artist.
+
+Why a cage to symbolise art: 
+- confinement? Is art not freedom?
+- Perhaps art is confined within a capitalist society, or that it is a product of society
+- Art may not be freedom in that art will not provide answers, nor resolve our problems, but rather pose questions? Perhaps in this way we could liberate ourselves?
+- He was free in his world of art, but entrapped within it. He could do nothing else, and ended up isolated in society.
