Update to week 5. Rearranging notes and CO1001, SP1001, PY1010

--- a/uni-notes/SP1001/SP1001 Literature/1. Seven Stories from Spanish America.md
+++ b/uni-notes/SP1001/SP1001 Literature/1. Seven Stories from Spanish America.md
@@ -1,5 +1,9 @@
-# W1 L1: Juan Rulfo and Introduction to the Short Story
-## The Short Story
+# Seven Stories
+```toc
+title: '**Table of Contents**'
+```
+## Lecture 1: Juan Rulfo and Introduction to the Short Story
+### The Short Story
 - Brevity
 	- Accessibility
 	- Hints, allusions, silences (due to narrative economy)
@@ -17,7 +21,7 @@ Jorege Luis Borges (Argentina 1899-1986)
 	 - Aristotle's Poetics
 	 - anagkaion --> necessity
 
-## *Diles que no me maten*, Juan Rulfo
+### *Diles que no me maten*, Juan Rulfo
 Jalisco 1918-1986
 Born a year before the end of the Mexican Revolution
 Lived through La guerra de los cristeros (1920s)
@@ -49,8 +53,8 @@ Rulfo's most dramatic story
 - 
 
 
-# W2 L2:
-## García Márquez
+## Lecture 2: García Márquez and Cortázar
+### García Márquez
 Early work focuses on the violence and intolerance in Colombia
 - El Bogotazo
 	- Massive riots following the assassination of the Liberal presidential candidate
@@ -66,7 +70,7 @@ Cien Años de Soledad.
 - Highly influential on Latin American and world literature
 - foundational text of what is known as magical realism
 
-## Magical Realism
+### Magical Realism
 - A tendency in Latin American writing in the 1960s-70s to incorporate magical elements into a narrative that is seemingly realistic
 - Aim: to provide a more complex understanding of the reality that the author seeks to represent
 
@@ -82,7 +86,7 @@ criollo: someone who has european ancestry but was born and raised in Latin Amer
 mestizo: someone of mixed heritage
 indigena: indigenous
 
-## Latin American Boom
+### Latin American Boom
 Magical Realism was one of the tendencies of the Latin American Boom
 
 - 1960s
@@ -102,7 +106,7 @@ Metaphors that stand for the complex and often irreconcilable realities of the c
 - Society (extreme stratification...)
 - Culture (Amerindian, European, African...)
 
-## Julio Cortázar
+### Julio Cortázar
 - Cortázar: in a novel there are various happenings in succesion. In the short story there is a principle happening which serves as a core whereby the actions of the heroes are articulated
 - Cortázar: in the short story the hermeneutic scope of the text is amplified
 - Makes use of colloquial language, orality, a fantastic/disturbing atmosphere.
@@ -127,7 +131,7 @@ The Neofantastic
 - Highly subversive of Reason and its binary logical (real/unreal, normal/magical, ordinary/extraordinary)
 - It is not real, not unreal, but something in between: The "third fronteir"
 
-# Seminar 1
+## Seminar 1: García Márquez and Cortázar
 Cortazar: pdf
 
 Garcia Marquez:
@@ -147,3 +151,75 @@ Why a cage to symbolise art:
 - Perhaps art is confined within a capitalist society, or that it is a product of society
 - Art may not be freedom in that art will not provide answers, nor resolve our problems, but rather pose questions? Perhaps in this way we could liberate ourselves?
 - He was free in his world of art, but entrapped within it. He could do nothing else, and ended up isolated in society.
+
+## Lecture 3: Alejandro Carpentier
+- Surrealism: the marvellous is artificially created (art)
+- Lo real maravilloso: Latin America is marvellous in reality by nature, history, and culture
+		Eurocentrism? Trying to promote cultural independency from Europe but at the same time is trapped within a Eurocentric narrative about the marvellous nature and culture of Latin America. Surely for the indigenous people living here before the conquest or even during the colonial period, there was nothing particularly marvellous about Latin America. It is a creation of the European narrative; even with the name: before the conquest there wasn't even anything to do with Latin (?).
+
+| Alejandro Carpentier                                               | García Márquez                                                     |
+| ------------------------------------------------------------------ | ------------------------------------------------------------------ |
+| As faithfull as possible to his sources                            | Explored history quite differently                                 |
+| Did not seek to transform history, but narrate it                  | Overstepped the limits fo empirical reality and existing mythology |
+| He did not create myths, but identified those already in existence | Invented his own versions, and did not deny this                   |
+
+Magical Realism or El real maravilloso?
+| Cien Años...                                                                                                                 | El reino...                                                                                                                        |
+| ---------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------- |
+| Inexplicable phenomena that are contrary to nature but described as if they weree everyday occurances (metaphorical reality) | Description of unreal that may be perceived as real by a certain group of people (reality as a matter of perception/point of view) |
+| Meaning depends on the internal structure of the world created by the author (fiction)                                       | Meaning principally derives from the author’s opinion of a world external to the novel (history)                                   |
+| Phenomena that occur in violation of natural laws                                                                            | The author identifies the presence of the marvellous in reality without changing or broadening reality’s scope                     |
+|                                                                                                                              | Literal transcriptions of the real world (e.g. the myth of Mackandal)                                                                                                                                   |
+
+### Viaje a la semilla
+- 1994 (later in *Guerra del tiempo*, 1958)
+- Experimental story; sophisticated, complex structure
+- Plot: the life of Márquez de Campellanías in reverse chronological order
+
+- Animism, the nucleus of the story
+	- Why is this happening? Central question
+
+- The entrance of Melchor becomes the means by which the 'real maravilloso' invades the young boy's life.
+
+- Is this just a story about a sorcerer's powers -- not really.
+
+## Seminar 2: Viaje a la semilla
+Prediction when time is going backwards is really re-telling.
+
+
+Regressive Time
+Cyclical Time: Ceres (agriculture, cyclical notions of time)
+Progressive Time
+
+The clash between progressive and regressive time.
+
+
+16th Century Europe: renaissance (rebirth of Classical knowledge in Europe, idea that the best of times were the Greek and Romans)
+
+18th Century Enlightenment
+
+A-theory and B-theory of time?
+
+Many great civilisations had cyclical ideas of time, or at least cyclical representations of time (e.g. Aztec, Mexica, Egyptian)
+
+Just by changing the point of view/perspective, the mundane real becomes lo real maravilloso.
+Everything looks marvellous from this new perspective of time.
+
+
+About unlearning rather than learning?
+
+An allegory of decolononialisation, of unlearning European cultural colonialisation?
+
+But is there an issue with Carpentier's understanding of decolonialisation?
+| Europe      | Latin America                           |
+| ----------- | --------------------------------------- |
+| Progression | Regression                              |
+| Adulthood   | Childhood                               |
+| Complexity  | Simplicity                              |
+| Culture     | Nature, primitive, imagination, freedom |
+
+Carpentier prefers the Latin American side; these were the stereotypes promoted by European colonialism. So Carpentier may be advocating for a decolonialisation into the colonial stereotypes of the indigenous culture, and not actually preferring the pre-colonial but the colonial image of the pre-colonial.
+
+
+
+
