metadata and structure

--- a/notes/PY1010 Mind and World/1. Mind-Body I Lectures.md
+++ b/notes/PY1010 Mind and World/1. Mind-Body I Lectures.md
@@ -2,13 +2,13 @@
 ---
 date: 
 Type:  note
-tags: university philosophy PY1010 mind-body lectures
+tags: university philosophy [[PY1010]] mind-body lectures
 Status:  TODO
 ---
+linking: [[PY1010]], [[mind-body]]
 
 # Week 1: Mind-Body Problem I
 ```toc 
-title: 'Table of Contents'
 ```
 ## Lecture 1: Origins of the Problem
 -- Antonio (Tony) Salgado Borge; absb1
