--- a/notes/SP1001/SP1001 Literature/1. Seven Stories from Spanish America.md
+++ b/notes/SP1001/SP1001 Literature/1. Seven Stories from Spanish America.md
@@ -2,12 +2,13 @@
 ---
 date: 
 Type:  note
-tags: university spanish SP1001 SP1001LIT lectures literature latin-america  
+tags: university spanish [[SP1001]] lectures literature latin-america short-story  
 Status:  
 ---
+Linking: [[SP1001]], [[SP1001 Literature]], 
+
 # Seven Stories
 ```toc
-title: '**Table of Contents**'
 ```
 ## Lecture 1: Juan Rulfo and Introduction to the Short Story
 ### The Short Story
