--- a/notes/SP1001/SP1001 Literature/2. Spanish Ballads.md
+++ b/notes/SP1001/SP1001 Literature/2. Spanish Ballads.md
@@ -2,12 +2,13 @@
 ---
 date: 
 Type:  note
-tags: university spanish SP1001 SP1001LANG lectures poetry ballad romancero romance 
-Status:  
+tags: university spanish [[SP1001]] literature lectures poetry ballad romancero romance 
+Status: TODO
 ---
+linking: [[SP1001]], [[SP1001 Literature]] [[Romancero]]
+
 # Spanish Ballads
 ```toc
-title:'**Table of Contents**'
 ```
 ## Introducción al Romancero
 Un Romancero es una collección de romances.
